<resources>
    <string name="app_name">СиСчётчик</string>

    <!--buttons-->
    <string name="ok">Готово</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <!--menu-->
    <string name="mi_save">Сохранить результаты в файл</string>
    <string name="mi_new">Сбросить результаты</string>
    <string name="mi_history">Посмотреть историю</string>
    <string name="mi_clear_history">Очистить историю</string>

    <!--prices-->
    <string name="price_10">10</string>
    <string name="price_20">20</string>
    <string name="price_30">30</string>
    <string name="price_40">40</string>
    <string name="price_50">50</string>

    <!--player control-->
    <string name="add_score">+</string>
    <string name="subtract_score">-</string>
    <string name="initial_score">0</string>

    <!--add player-->
    <string name="player_name_title">Введите имя нового игрока</string>

    <!--logs-->
    <string name="new_player_log"><b>%s</b> присоединился к игре</string>
    <string name="reset_log">Сброс результатов</string>
    <string name="add_divider">Вставить разделитель</string>

    <!--close-->
    <string name="close_title">Выход</string>
    <string name="close_message">Вы действительно хотите выйти?</string>

    <!--reset-->
    <string name="reset_title">Сброс</string>
    <string name="reset_message">Вы действительно хотите сбросить все результаты?</string>

    <!--save results-->
    <string name="save_results_title">Сохранить ход игры в файл</string>

    <!--exceptions-->
    <string name="parent_list_exception">Не получилось перейти в родительскую папку!</string>
    <string name="folder_list_exception">Не получилось перейти в папку!</string>

    <!--files-->
    <string name="folder_label">Папка</string>
    <string name="file_label">Файл</string>
    <string name="file_saved_message">Файл сохранён!</string>
    <string name="file_save_error">Не удалось сохранить файл!</string>

    <!--history-->
    <string name="history_title">История</string>
</resources>
