<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/add_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_score" />

    <TextView
        android:id="@+id/player_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_score" />

    <Button
        android:id="@+id/subtract_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract_score" />
</LinearLayout>